syntax = "proto3";

package spanprotos;

option go_package = "github.com/deepaksharma/trace-aware-reservoir-otel/internal/processor/reservoirsampler/spanprotos";

// ReservoirState represents the state of the reservoir sampler
message ReservoirState {
  // Current window ID
  int64 current_window = 1;
  
  // Window start time as Unix timestamp
  int64 window_start_time = 2;
  
  // Window end time as Unix timestamp
  int64 window_end_time = 3;
  
  // Count of spans seen in this window
  int64 window_count = 4;
}

// SpanWithResourceSummary represents a serialized SpanWithResource
message SpanWithResourceSummary {
  // Span data serialized from pdata.Span
  bytes span_data = 1;
  
  // Resource data serialized from pdata.Resource
  bytes resource_data = 2;
  
  // Scope data serialized from pdata.InstrumentationScope
  bytes scope_data = 3;
}